--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Derek's Website</title>
 </head>
 
 <body>
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-    <footer id="links" class="bg-light text-center text-lg-start">
+    <footer id="links" class="text-center text-lg-start">
         <div class="text-center p-3  linkFooter">
             <a id="cv" href="pdf/Derek_s_CV.pdf" target="_blank" class="text-dark h2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person" viewBox="0 0 16 16">
