--- a/index.html
+++ b/index.html
@@ -163,14 +163,15 @@
                     </div>
                   
                     <!-- Left and right controls -->
-                    <a class="carousel-control-prev" href="#fallsCarousel" role="button" data-slide="prev">
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
-                      </a>
-                      <a class="carousel-control-next" href="#fallsCarousel" role="button" data-slide="next">
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
-                      </a>
+                    </button>
+                    
                 </div>
 
                 <div id="cafe" class="carousel slide" data-ride="carousel">
