--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-lg-4">
             <div id="sideContent">
                 <div id="imgDiv">
-                    <img id="me" src="images/me.jpg">
+                    <img id="me" src="images/me.png">
                 </div>
                 <div id="#name">
                     <h2 class="text-center">Derek Hon</h2>
@@ -116,7 +116,7 @@
         
             </div>
 
-            <div id="photo" class="rowContent">
+            <div id="photo" class="row rowContent">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                       <ul class="navbar-nav">
