adjust image sizes

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                     </h3>
                     <span id="aboutMe" class="text-left">                        
                         I started photography as a hobby around 2018 joining the Brock University Photography Club, engaging
-                        with much more experienced photographers I found a love for the hobby. I am still quite a novice within
+                        with much more experienced photographers I found a love for the hobby. Going from a VP role in 2019 to
+                        a President role in 2020 was a little unexpected but fun nonetheless. I am still quite a novice within
                         the hobby and am always looking to improve when the opportunity arises. <br /><br />
-
                         
-                        I started doodling in 2008, taking sporadic breaks due to motivation. Up until 2017/18 I would only 
+                        I started doodling in 2008, taking sporadic breaks due to motivation. Up until 2019 I would only 
                         try to replicate art based on references but have tried to branch out more since then. <br /><br />
 
                         Home cooking has become much more of a passion since starting university. Exploring new recipes in
