Art section edit

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                 <div class="row rowContent">
                     <div id="valor">
                         <img src="images/Valor.jpg">
-                        <h3 class="display-4 text-center"> 
-                            Commission for @LiamLokara on Instagram/Spotify.
+                        <h3 class="display-6 text-center"> 
+                            Commission for LiamLokara on <a href="https://www.instagram.com/liamlokara/">Instagram</a>/<a href="https://open.spotify.com/artist/0IXb37MiF7rYM6iwhDgiK2?si=tIX0j-FGQN-Cx2BWtOfVjA">Spotify</a>.
                         </h3>
                     </div>
                 </div>
