--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
             <div id="cv">
                 <div class="row rowContent">
-                    <iframe src="pdf/CV-2.pdf" id="cv-iframe"></iframe>
+                    <iframe src="pdf/CV.pdf" id="cv-iframe"></iframe>
                 </div>
             </div>
         </div>
